--- a/src/styles/_variables/_colours.scss
+++ b/src/styles/_variables/_colours.scss
@@ -7,7 +7,7 @@
   --color-white: #fff;
   --color-black: #000;
   --color-primary: #000;
-  --color-link: transparent;
+  --color-link: #000;
   --color-light-text: #000;
   --color-dark-text: #000;
   --color-secondary: #000;
