--- a/src/styles/_variables/_reset.scss
+++ b/src/styles/_variables/_reset.scss
@@ -10,14 +10,6 @@
   outline: none;
 }
 
-html:not(.wp-toolbar) {
-  box-sizing: border-box;
-  font-family: var(--font-family-default);
-  font-size: var(--document-scale-default);
-  color: var(--color-dark-text);
-  height: 100%;
-}
-
 html {
   box-sizing: border-box;
   font-family: var(--font-family-default);
@@ -32,7 +24,7 @@ html {
 //   overflow: hidden;
 // }
 
-body:not(.wp-admin) {
+body {
   //font-size: var(--font-size-default);
   display: flex;
   flex-direction: column;
