--- a/src/ui/templates/header.html
+++ b/src/ui/templates/header.html
@@ -2,7 +2,7 @@
     <div class="navigation-bar-wrapper site-width flex">
         <div class="logo-container">
             <a href="/">
-                <img src="../assets/img/Logo.png" alt="application logo"/>
+                <img src="/static/assets/img/Logo.png" alt="application logo"/>
             </a>
         </div>
         <div class="navigation-bar">
