added color, fonts

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -7,5 +7,13 @@ header {
         .logo-container img {
             width: 150px;
         }
+
+        .navigation-bar {
+            nav {
+                ul {
+                    list-style: none;
+                }
+            }
+        }
     }
 }
