--- a/src/styles/_variables/_colours.scss
+++ b/src/styles/_variables/_colours.scss
@@ -6,10 +6,10 @@
   
   --color-white: #fff;
   --color-black: #000;
-  --color-primary: #000;
-  --color-link: #000;
-  --color-light-text: #000;
-  --color-dark-text: #000;
+  --color-primary: #343A40;
+  --color-link: #343A40;
+  --color-light-text: #BFB1C1;
+  --color-dark-text: #343A40;
   --color-secondary: #000;
   --color-tertiary: transparent;
   --color-quaternary: transparent;
