--- a/src/ui/templates/header.html
+++ b/src/ui/templates/header.html
@@ -9,7 +9,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/">Back</a>
+                        <a href="/" class="button button--arrow">Back</a>
                     </li>
                 </ul>
             </nav>
