--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -3,6 +3,7 @@ header {
 
     .navigation-bar-wrapper {
         justify-content: space-between;
+        align-items: center;
     
         .logo-container img {
             width: 150px;
